Fixed border-radius on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -379,6 +379,9 @@ footer {
         margin: 0;
         padding: 0;
     }
+    #container {
+        border-radius: 0;
+    }
     header img {
         height: 40px;
     }
